--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     annotationProcessor('org.projectlombok:lombok:1.18.22')
     testImplementation('org.projectlombok:lombok:1.18.22')
     testAnnotationProcessor('org.projectlombok:lombok:1.18.22')
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.0'
+
 }
 
 test {
